// Vitest Snapshot v1

exports[`Badge > empty badge 1`] = `
<body>
  <div>
    <div
      class="sc-bczRLJ jBfdHU"
    />
  </div>
</body>
`;

exports[`Badge > numbered badge 1`] = `
<body>
  <div>
    <div
      class="sc-bczRLJ jBfdHU"
    >
      7
    </div>
  </div>
</body>
`;

exports[`Badge > numbered badge, white on red 1`] = `
<body>
  <div>
    <div
      class="sc-bczRLJ kUKtus"
    >
      7
    </div>
  </div>
</body>
`;
